tests/NormalTests/paczka1/fuzzy1/62094237.err
Error in line 1: A354 S901 83,9
Error in line 3: bX0 S901 26,5
Error in line 20: LI7ZJRnkx S901 5,7
Error in line 28: wEgt88IqV05 S901 51,7
Error in line 32: LI7ZJRnkx A711 16,30
Error in line 33: KOPzj7D A354 71,8
Error in line 30: wEgt88IqV05 A711 64,8
Error in line 38: bX0 S463 20,0
